@@ -4,6 +4,7 @@ Added a feature to erase old out of date Session Data.
 Fixed PHP Notice: Undefined index: team_id in planet_report_ce.php on line 301
 First part of the Plugin and Event Systems (this may break stuff)
 Second part of the Plugin and Event System, Cleanup and [test plugin] (THIS WILL BREAK)
+Yep, it broke LOL, should now be fixed and have a working plugin that displays Hello World every 5 seconds only on the Settings Page.
 Oh and Happy New Year.
 
 TheMightyDude (24 December 2012)
